2015-04-18 Pierre Wieser <pwieser@trychlos.org>

	* src/mysql/ofa-mysql-idbms.c: doesn't truncate last part of database
	names which would have an underscore.

2015-04-17 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-restore-assistant.c: accept that no dossier be opened.

2015-04-16 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-backup.c: fix default folder handling (todo #806).

2015-04-13 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-render-ledgers-page.c: fix general summary (todo #800).

	* src/ui/ofa-balance-render.c,
	* src/ui/ofa-render-books-page.c,
	* src/ui/ofa-render-ledgers-page.c: set attributes on needed (todo #794).

	* src/ui/ofa-irenderable.c,
	* src/ui/ofa-irenderable.h:
	- make sure the rendering is idempotent (todo #795)
	- improve some comments. 

	* src/ui/ofa-render-books-page.c: fix the general computing (todo #797).

2015-04-12 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-pdf-ledgers.c,
	* src/ui/ofa-pdf-ledgers.h,
	* src/ui/ofa-print-ledgers.ui: removed files.

	* src/ui/ofa-render-ledgers-bin.c,
	* src/ui/ofa-ledgers-book-bin.h,
	* src/ui/ofa-ledgers-book-bin.ui: new ofaLedgersBookBin class.

	* src/ui/ofa-render-ledgers-page.c,
	* src/ui/ofa-ledgers-book-render.h: new ofaLedgersBookRender class.

	* src/ui/Makefile.am,
	* src/ui/ofa-main-window.c: updated accordingly.

	* src/ui/ofa-dos-menubar.ui: review menu items order and labels.

	* src/ui/ofa-render-books-page.c: use want_groups() method.

	* src/ui/ofa-irenderable.c: fix end-of-page position computing.

	* src/ui/ofa-iaccounts-filter.c: fix 'To:' account label display.

	* src/ui/ofa-irenderable.c,
	* src/ui/ofa-irenderable.h:
	- define new want_groups() interface method
	- reset sIRenderable data on begin_render(), freeing on end_render().

	* src/ui/ofa-balance-render.c: updated accordingly.

	* src/ui/ofa-balance-bin.ui,
	* src/ui/ofa-balance-render.c,
	* src/ui/ofa-accounts-book-bin.ui,
	* src/ui/ofa-render-books-page.c: fix minor typos.
